--- a/lab4/lab4_2012011401.md
+++ b/lab4/lab4_2012011401.md
@@ -108,8 +108,7 @@ get_pid(void) {
 
 ```
 
-## [练习3]阅读代码,理解	proc_run函数和它调用的函数如何完成进程切换的。(无编码
-工作)
+## [练习3]阅读代码,理解	proc_run函数和它调用的函数如何完成进程切换的。(无编码工作)
 ```
 proc_run函数如下：
 // proc_run - make process "proc" running on cpu
