--- a/lab4/lab4_2012011401.md
+++ b/lab4/lab4_2012011401.md
@@ -24,7 +24,8 @@ struct context {
     uint32_t edi;
     uint32_t ebp;
 };
-属于进程的上下文,用于进程切换,当进行进程切换的时候我们保存context结构，使用	context	保存寄存器的目的就在于在内核态中能够进行上下文之间的切换。
+属于进程的上下文,用于进程切换,当进行进程切换的时候我们保存context结构，使用context
+保存寄存器的目的就在于在内核态中能够进行上下文之间的切换。
 
 tf是中断帧的指针,总是指向内核栈的某个位置
 struct trapframe {
@@ -49,7 +50,8 @@ struct trapframe {
     uint16_t tf_ss;
     uint16_t tf_padding5;
 } 
-它主要记录了进程在用户态和内核态切换时进程在被中断前的状态。与context的区别在于它属于一个进程内部状态的变化而不属于进程间的状态变化。
+它主要记录了进程在用户态和内核态切换时进程在被中断前的状态。与context的区别
+在于它属于一个进程内部状态的变化而不属于进程间的状态变化。
 ```
 
 ## [练习2]为新创建的内核线程分配资源(需要编码)
@@ -64,7 +66,12 @@ hash_proc(proc);
 list_add_before(&proc_list, &(proc->list_link));
 wakeup_proc(proc);
 ret=proc->pid;
-过程是这样的：首先调用alloc_proc,首先获得一块用户信息块;然后为进程分配一个内核栈;接着复制原进程的内存管理信息到新进程(但内核线程不必做此事);再复制原进程上下文到新进程;再将新进程添加到进程列表;再唤醒新进程;最后返回新进程号。如果出现了复制内存的问题，调用put_kstack(proc)进行处理;如果出现了建立内核堆栈的问题，则调用kfree(proc)进行异常处理。
+过程是这样的：首先调用alloc_proc,首先获得一块用户信息块;然后
+为进程分配一个内核栈;接着复制原进程的内存管理信息到新进程(但内
+核线程不必做此事);再复制原进程上下文到新进程;再将新进程添加到
+进程列表;再唤醒新进程;最后返回新进程号。如果出现了复制内存的
+问题，调用put_kstack(proc)进行处理;如果出现了建立内核堆栈的
+问题，则调用kfree(proc)进行异常处理。
 ```
   
 [练习2.1] 请说明ucore是否做到给每个新fork的线程一个唯一的id?请说明你的分析和理由。
@@ -104,7 +111,10 @@ get_pid(void) {
     }
     return last_pid;
 }
-整个有0-4095编号，这里的last_pid是最终的编号，可以看出它一直在递增，如果这些进程号码被装满的话，这里的repeat结构会起到作用，它会一直监听直到一个进程被释放掉，last_pid就会返回这个进程号码，因而有了这一套机制，ucore是一定可以保证进程可以被分配唯一的id。
+整个有0-4095编号，这里的last_pid是最终的编号，可以看出它一直在递增，
+如果这些进程号码被装满的话，这里的repeat结构会起到作用，它会一直监
+听直到一个进程被释放掉，last_pid就会返回这个进程号码，因而有了这
+一套机制，ucore是一定可以保证进程可以被分配唯一的id。
 
 ```
 
@@ -128,8 +138,16 @@ proc_run(struct proc_struct *proc) {
         local_intr_restore(intr_flag);
     }
 }
-这个函数的执行过程首先是判断当前的线程是不是要切换到的线程，如果是就省事了，如果不是就进行如下的操作： 第一个是要进行中断，随后把线程更新为要切换到的线程，之后修改esp0和cr3，设置任务状态段ts中特权态0下的栈顶指针esp0为next内核线程，设置CR3寄存器的值为next内核线程initproc的页目录表起始地址next->cr3,这实际上是完成进程间的页表切换，由switch_to函数完成具体的两个线程的执行现场切换,即切换各个寄存器,当switch_to函数执行完“ret”指令后,就切换到initproc执行了。
-在整个实验的过程当中，实际上是创建了两个内核进程，第一个proc_init当中的id为0的进程，即idleproc。而第二个内核进程是id为1的initproc。
+这个函数的执行过程首先是判断当前的线程是不是要切换到的线程，如果是
+就省事了，如果不是就进行如下的操作： 
+第一个是要进行中断，随后把线程更新为要切换到的线程，之后修改esp0和
+cr3，设置任务状态段ts中特权态0下的栈顶指针esp0为next内核线程，设置
+CR3寄存器的值为next内核线程initproc的页目录表起始地址next->cr3,这
+实际上是完成进程间的页表切换，由switch_to函数完成具体的两个线程的
+执行现场切换,即切换各个寄存器,当switch_to函数执行完“ret”指令后,
+就切换到initproc执行了。
+在整个实验的过程当中，实际上是创建了两个内核进程，第一个proc_init
+当中的id为0的进程，即idleproc。而第二个内核进程是id为1的initproc。
 ```
 
 
