--- a/lab1/lab1_2012011401.md
+++ b/lab1/lab1_2012011401.md
@@ -1,4 +1,4 @@
-# Lab1 report_zmh
+# Lab1 report_zmh_2012011401
 
 ## [练习1]
 
@@ -383,7 +383,7 @@ call指令压栈，所以bootmain中ebp为0x7bf8。
 
 ## [练习6]
 完善中断初始化和处理
-[练习6.1] 中断向量表中一个表项占多少字节？其中哪几位代表中断处理代码的入口？
+[练习6.1] 中断向量表中一个表项占多少字节？地其中哪几位代表中断处理代码的入口？
 中断向量表一个表项占用8字节，其中2-3字节是段选择子，0-1字节和6-7字节拼成位移，
 两者联合便是中断处理程序的入口地址。
 
@@ -405,5 +405,10 @@ if (ticks % TICK_NUM == 0) {
  print_ticks();
 }
 ```
+## 与参考答案除了个别细节处有所不同以外，大致流程基本相同。很多地方参考了参考答案。
 
+## 本实验重要的知识点以及与对应的OS原理中的知识点
+ucore OS的启动过程，ucore OS的中断机制，bios的功能，bootloader的功能。实验与原理的主要区别在于实验更加琐碎和细节，实验更加底层和硬件。
 
+## 列出你认为OS原理中很重要,但在实验中没有对应上的知识点
+这个实验还是挺全面的，基本上涵盖了所有原理对应的知识点。
